Tried to fix df no package warning msg.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,8 @@ export(recall)
 export(rep_mat)
 export(sensitivity)
 export(specificity)
+import(df)
 import(stats)
 importFrom(stats,dchisq)
+importFrom(stats,dnorm)
 importFrom(stats,dt)
-importFrom(stats,log)
-importFrom(stats,sum)
